[gd_scene load_steps=21 format=3 uid="uid://qofjfvol201e"]

[ext_resource type="Script" path="res://Scripts/Environment/Particular.gd" id="1_mvh1e"]
[ext_resource type="PackedScene" uid="uid://d4nifki50ahlx" path="res://Scenes/Sitios/Particulares/PB5_Model.tscn" id="2_3ceb2"]
[ext_resource type="Script" path="res://Scripts/Navigation/Particular_Navigation.gd" id="3_56rpr"]
[ext_resource type="Script" path="res://Scripts/Managers/ParticularCameraManager.gd" id="3_xyga1"]
[ext_resource type="Script" path="res://Scripts/UI/CamarasParticular/UI_CamarasParticular.gd" id="4_mgldc"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="5_qc0mw"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="6_bkdkv"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="7_skwsb"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="8_sii0s"]
[ext_resource type="Texture2D" uid="uid://d3t35nmgqbmuj" path="res://Recursos/UI/Botones_Vistas/Boton_Vistas_a.png" id="10_jcs8k"]
[ext_resource type="Script" path="res://Scripts/UI/Animations/AnimationComponent.gd" id="11_0aio5"]
[ext_resource type="Texture2D" uid="uid://dg5oipusuww6x" path="res://Recursos/UI/Botones_Vistas/Boton_Vistas_expDerecha.png" id="11_vdkxb"]
[ext_resource type="Texture2D" uid="uid://b3h43rm52tco1" path="res://Recursos/UI/Botones_Vistas/Boton_Vistas_VistaLibre_a.png" id="11_vltqw"]
[ext_resource type="Script" path="res://addons/easy_charts/utilities/containers/canvas/canvas.gd" id="12_c5vs0"]
[ext_resource type="Texture2D" uid="uid://6wyhls7pma6d" path="res://Recursos/UI/Botones_Vistas/Boton_Vistas_expInferior.png" id="12_dl2wb"]
[ext_resource type="Texture2D" uid="uid://dmvxf7j1gk80r" path="res://Recursos/UI/Botones_Vistas/Boton_Vistas_Camara_a.png" id="12_qmh32"]

[sub_resource type="Resource" id="Resource_6rtdx"]
script = ExtResource("6_bkdkv")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_d1nsl"]
script = ExtResource("7_skwsb")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="SphereShape3D" id="SphereShape3D_uu0ns"]
margin = 0.5
radius = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_dc2cm"]
font_size = 20
font_color = Color(0, 0, 0, 1)
outline_size = 10
outline_color = Color(0.74902, 0.831373, 1, 0.698039)
shadow_size = 2756

[node name="Particular" type="Node3D"]
script = ExtResource("1_mvh1e")
particular_scene = ExtResource("2_3ceb2")
idEstacion = 1

[node name="ParticularCameraManager" type="Node3D" parent="." node_paths=PackedStringArray("cameraTripod", "freeCamera", "phantomCamera", "buttons", "virtualCameras")]
script = ExtResource("3_xyga1")
cameraTripod = [null]
freeCamera = NodePath("../camera_parent/CollisionShape3D/Camera3Dp")
phantomCamera = NodePath("../Camera3D")
buttons = [NodePath("../Canvas/Control/Button_0"), NodePath("../Canvas/Control/Button_1"), NodePath("../Canvas/Control/Button_2"), NodePath("../Canvas/Control/Button_3"), NodePath("../Canvas/HBoxContainer2/Button_4")]
virtualCameras = [NodePath("../camera_parent/Camera_POV_0"), NodePath("../Camera_POV_1"), NodePath("../Camera_POV_2"), NodePath("../Camera_POV_3")]
keyCodes = Array[int]([49, 50, 51, 52])

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 9.17423, -20)
current = true

[node name="CameraHost" type="Node3D" parent="Camera3D"]
transform = Transform3D(0.654912, -2.25218e-08, -0.755705, -0.199397, 0.964562, -0.172803, 0.728924, 0.263856, 0.631704, -63.7768, -30.5909, -33.7907)
script = ExtResource("8_sii0s")

[node name="camera_parent" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 9.17423, -20)
input_capture_on_drag = true
platform_wall_layers = 1
safe_margin = 0.5
script = ExtResource("3_56rpr")
can_pan = true
maxX = 40
maxZ = 20
maxY = 20
can_rotate = true
rotate_speed = 1.0
initialRotationCamera = -45
LimitRotationCamera = 0
minRotationY = -30.0
maxRotationY = 30.0
offSetDistanceInclination = 10.0
tilt_speed = 0.25
zoom_speed = 0.5
can_zoom = true
maxZoom = 5.0
initialZoom = 30.0
zoom_treshold = 45.0
max_pan_speed = 0.01
z_Depth = 1000.0

[node name="Camera_POV_0" type="Node3D" parent="camera_parent"]
script = ExtResource("5_qc0mw")
tween_resource = SubResource("Resource_6rtdx")
camera_3d_resource = SubResource("Resource_d1nsl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="camera_parent"]
shape = SubResource("SphereShape3D_uu0ns")

[node name="Camera3Dp" type="Camera3D" parent="camera_parent/CollisionShape3D"]

[node name="Container" type="Node3D" parent="."]

[node name="Camera_POV_1" type="Node3D" parent="."]
transform = Transform3D(0.999387, 0, -0.0350043, 0.00159461, 0.998962, 0.0455269, 0.0349679, -0.0455548, 0.99835, 7.16729, 5.85234, -79.4011)
script = ExtResource("5_qc0mw")
tween_resource = SubResource("Resource_6rtdx")
camera_3d_resource = SubResource("Resource_d1nsl")

[node name="Camera_POV_2" type="Node3D" parent="."]
transform = Transform3D(0.8555, 0.239351, -0.459163, 0, 0.886753, 0.462244, 0.517803, -0.39545, 0.758617, -14.2918, 19.5768, -52.4485)
script = ExtResource("5_qc0mw")
tween_resource = SubResource("Resource_6rtdx")
camera_3d_resource = SubResource("Resource_d1nsl")

[node name="Camera_POV_3" type="Node3D" parent="."]
transform = Transform3D(0.654912, -0.199397, 0.728924, 0, 0.964562, 0.263856, -0.755705, -0.172803, 0.631703, 60.7429, 38.4227, -32.1369)
script = ExtResource("5_qc0mw")
tween_resource = SubResource("Resource_6rtdx")
camera_3d_resource = SubResource("Resource_d1nsl")

[node name="Canvas" type="Control" parent="." node_paths=PackedStringArray("verticalBackground", "horizontalBackground", "buttons")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_mgldc")
verticalBackground = NodePath("Vertical_Background")
horizontalBackground = NodePath("Horizontal_Background")
buttons = [NodePath("Control/Button_0"), NodePath("Control/Button_1"), NodePath("Control/Button_2"), NodePath("Control/Button_3"), NodePath("HBoxContainer2/Button_4")]

[node name="Vertical_Background" type="TextureRect" parent="Canvas"]
layout_mode = 0
offset_left = 17.0
offset_top = 240.0
offset_right = 130.0
offset_bottom = 630.0
texture = ExtResource("12_dl2wb")

[node name="Horizontal_Background" type="TextureRect" parent="Canvas"]
layout_mode = 0
offset_left = 96.0
offset_top = 158.0
offset_right = 274.0
offset_bottom = 265.0
texture = ExtResource("11_vdkxb")

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas"]
layout_mode = 2
offset_left = 3.0
offset_top = 153.0
offset_right = 142.0
offset_bottom = 286.0

[node name="Button_Home" type="Button" parent="Canvas/HBoxContainer"]
layout_mode = 2
icon = ExtResource("10_jcs8k")
flat = true
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Canvas"]
layout_mode = 2
offset_left = 151.0
offset_top = 158.0
offset_right = 253.0
offset_bottom = 260.0

[node name="Button_4" type="Button" parent="Canvas/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("11_vltqw")
flat = true
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas"]
clip_contents = true
layout_mode = 2
offset_left = 20.0
offset_top = 282.0
offset_right = 117.0
offset_bottom = 653.0
theme_override_constants/separation = -10

[node name="Control" type="Control" parent="Canvas"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 6.15
anchor_right = 2.975
anchor_bottom = 15.125
offset_left = -2.0
offset_bottom = -6.10352e-05

[node name="Button_Origin" type="Button" parent="Canvas/Control"]
visible = false
layout_mode = 0
offset_top = -67.0
offset_right = 97.0
offset_bottom = 21.0
icon = ExtResource("12_qmh32")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="Canvas/Control/Button_Origin"]
layout_mode = 0
offset_left = 63.0
offset_top = 33.0
offset_right = 87.0
offset_bottom = 61.0
text = "0"
label_settings = SubResource("LabelSettings_dc2cm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationComponent" type="Node" parent="Canvas/Control/Button_Origin"]
script = ExtResource("11_0aio5")

[node name="Button_0" type="Button" parent="Canvas/Control"]
layout_mode = 2
offset_top = 31.0
offset_right = 97.0
offset_bottom = 119.0
icon = ExtResource("12_qmh32")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="Canvas/Control/Button_0"]
layout_mode = 0
offset_left = 63.0
offset_top = 33.0
offset_right = 87.0
offset_bottom = 61.0
text = "0"
label_settings = SubResource("LabelSettings_dc2cm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationComponent" type="Node" parent="Canvas/Control/Button_0"]
script = ExtResource("11_0aio5")
useOriginalProperty = 1
time = 0.5

[node name="Button_1" type="Button" parent="Canvas/Control"]
layout_mode = 2
offset_top = 109.0
offset_right = 97.0
offset_bottom = 197.0
icon = ExtResource("12_qmh32")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="Canvas/Control/Button_1"]
layout_mode = 0
offset_left = 63.0
offset_top = 33.0
offset_right = 87.0
offset_bottom = 61.0
text = "1"
label_settings = SubResource("LabelSettings_dc2cm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationComponent" type="Node" parent="Canvas/Control/Button_1"]
script = ExtResource("11_0aio5")
useOriginalProperty = 1
time = 0.5

[node name="Button_2" type="Button" parent="Canvas/Control"]
layout_mode = 2
offset_top = 187.0
offset_right = 97.0
offset_bottom = 275.0
icon = ExtResource("12_qmh32")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="Canvas/Control/Button_2"]
layout_mode = 0
offset_left = 63.0
offset_top = 33.0
offset_right = 87.0
offset_bottom = 61.0
text = "2"
label_settings = SubResource("LabelSettings_dc2cm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationComponent" type="Node" parent="Canvas/Control/Button_2"]
script = ExtResource("11_0aio5")
useOriginalProperty = 1
time = 0.5

[node name="Button_3" type="Button" parent="Canvas/Control"]
layout_mode = 2
offset_top = 265.0
offset_right = 97.0
offset_bottom = 353.0
icon = ExtResource("12_qmh32")
flat = true
icon_alignment = 1

[node name="Label" type="Label" parent="Canvas/Control/Button_3"]
layout_mode = 0
offset_left = 63.0
offset_top = 33.0
offset_right = 87.0
offset_bottom = 61.0
text = "3"
label_settings = SubResource("LabelSettings_dc2cm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationComponent" type="Node" parent="Canvas/Control/Button_3"]
script = ExtResource("11_0aio5")
useOriginalProperty = 1
time = 0.5

[node name="Window" type="Window" parent="."]
position = Vector2i(569, 200)
size = Vector2i(300, 300)

[node name="Canvas" type="Control" parent="Window"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_c5vs0")

[node name="HBoxContainer" type="HBoxContainer" parent="Window/Canvas"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button_AnimIn_1" type="Button" parent="Window/Canvas/HBoxContainer"]
layout_mode = 2
text = "Anim In"

[node name="Button_AnimOut_1" type="Button" parent="Window/Canvas/HBoxContainer"]
layout_mode = 2
text = "Anim Out"

[connection signal="pressed" from="Canvas/HBoxContainer/Button_Home" to="Canvas" method="ToggleUI"]
[connection signal="pressed" from="Window/Canvas/HBoxContainer/Button_AnimIn_1" to="Canvas/Control/Button_0/AnimationComponent" method="AnimIn"]
[connection signal="pressed" from="Window/Canvas/HBoxContainer/Button_AnimOut_1" to="Canvas/Control/Button_0/AnimationComponent" method="AnimOut"]
